Removed a bug which added extra padding on mobile.

--- a/source/css/_components/_header.scss
+++ b/source/css/_components/_header.scss
@@ -10,13 +10,6 @@ html{
             text-align: center;
           }
 
-          @include small-only{
-            min-height: 450px;
-          }
-
-          @include small-landscape-only{
-            min-height: 350px;
-          }
         }
 
 
